# youtube-chat-assistant-backend

./: .gitignore  DockerFile.dev  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
nginx/: cert.pem  key.pem  nginx.conf
src/chat/: dtos.py  routes.py  services.py
src/common/: exceptions.py
src/common/redis/: connection.py
src/llm/: prompts.py  service.py
src/youtube_transcript/: repository.py  routes.py  services.py
